# backend/swagger/swagger-output.json
@@ -1,9 +1,9 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "This is my API Document",
-    "description": "이렇게 스웨거 자동생성이 됩니다.",
-    "version": "1.0.0"
+    "title": "YBR RestAPI DOCUMENT",
+    "version": "1.0.0",
+    "description": ""
   },
   "servers": [
     {
@@ -58,13 +58,42 @@
     },
     "/api/user/login": {
       "post": {
-        "description": "",
+        "tags": [
+          "user"
+        ],
+        "description": "YBR에서 제공하는 일반 로그인 API",
         "parameters": [
           {
             "name": "authorization",
             "in": "header",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "params",
+            "in": "params",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "params": {
+                  "type": "object",
+                  "properties": {
+                    "userId": {
+                      "type": "string",
+                      "example": "primero"
+                    },
+                    "password": {
+                      "type": "string",
+                      "example": "1234"
+                    },
+                    "rememberMe": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  }
+                }
+              }
             }
           }
         ],
@@ -91,6 +120,9 @@
     },
     "/api/user/check": {
       "get": {
+        "tags": [
+          "user"
+        ],
         "description": "",
         "parameters": [
           {
@@ -105,6 +137,14 @@
             "in": "query",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "params",
+            "in": "params",
+            "schema": {
+              "type": "object",
+              "properties": {}
             }
           }
         ],
@@ -138,7 +178,7 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "targetCode": {
+                  "waitingId": {
                     "example": "any"
                   },
                   "toUID": {
@@ -156,13 +196,29 @@
     },
     "/api/user/waiting": {
       "post": {
-        "description": "",
+        "tags": [
+          "user"
+        ],
+        "description": "입력한 초대코드로 상대방에게 요청을 보내는 API",
         "parameters": [
           {
             "name": "authorization",
             "in": "header",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "params",
+            "in": "params",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "targetCode": {
+                  "type": "string",
+                  "example": "ABCDEFG1"
+                }
+              }
             }
           }
         ],
@@ -189,13 +245,34 @@
     },
     "/api/user/upload/image": {
       "post": {
-        "description": "",
+        "tags": [
+          "user"
+        ],
+        "summary": "token*",
+        "description": "사용자의 프로필 이미지를 업로드하는 API",
         "parameters": [
           {
             "name": "authorization",
             "in": "header",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "params",
+            "in": "params",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "coupleInfoId": {
+                  "type": "number",
+                  "example": 0
+                },
+                "file": {
+                  "type": "string",
+                  "example": "file"
+                }
+              }
             }
           }
         ],
@@ -261,13 +338,24 @@
     },
     "/api/user/code": {
       "put": {
-        "description": "",
+        "tags": [
+          "user"
+        ],
+        "description": "일반 사용자의 초대(인가)코드를 재발급받는 API",
         "parameters": [
           {
             "name": "authorization",
             "in": "header",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "params",
+            "in": "params",
+            "schema": {
+              "type": "object",
+              "properties": {}
             }
           }
         ],
@@ -280,7 +368,10 @@
     },
     "/api/waiting": {
       "get": {
-        "description": "",
+        "tags": [
+          "waiting"
+        ],
+        "description": "해당 유저의 신청(요청)목록을 모두 들고오는 API",
         "parameters": [
           {
             "name": "authorization",
@@ -294,6 +385,14 @@
             "in": "query",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "params",
+            "in": "params",
+            "schema": {
+              "type": "object",
+              "properties": {}
             }
           }
         ],
